Add ZilliqaMessage (Zilliqa-JavaScript-Library@ a197f6f)

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -22,6 +22,7 @@ included:
   - Tests
 excluded: 
    - Sources/Tron/Protobuf
+   - Sources/Zilliqa/protobuf
 function_parameter_count:
   warning: 20
   error: 25
